<resources>
    <string name="app_name">Stop N Shop</string>
    <string name="splashTitle">Stop N Shop</string>
    <string name="image">image</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="dontHaveAnAccount">Dont have an account?</string>
    <string name="register">Register</string>
    <string name="createAnAccount">Create an account</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="iAgreeToTerms"><![CDATA[I Agree To The Terms & Conditions]]></string>
    <string name="alreadyHaveAnAccount">Already have an account?</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="next">Next</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="welcome">Welcome!</string>
    <string name="thankYou">Thank you for joining and creating an account.</string>
    <string name="appTitle">Stop N Shop</string>
    <string name="appDescription">A e-commerce app I have been working on to get noticed by companies. So far...unsuccessful...</string>
    <string name="headsUpMessage">We just need a bit more information for your account.</string>
    <string name="beforeYouStart">Before you start</string>
    <string name="getStarted">Get started</string>
    <string name="skip">Skip</string>
    <string name="pleaseWait">Please wait...</string>
    <string name="enterEmail">Enter email</string>
    <string name="send">Send</string>
    <string name="backToLogin">Back to Login</string>
    <string name="forgotPasswordMessage">Please enter your email address and we will send you an email to reset your password.</string>
    <string name="title">Title</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="location">Location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="setUpTitle">Complete Account Info</string>
    <string name="selectImageAction">Select Image Action</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="products">Products</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="sensitiveAccountInfo">Sensitive Account Info</string>
    <string name="accountInfo">Account Info</string>
    <string name="sensitiveUserInfo"><b>Sensitive User Information:</b><br> </br><u>Please provide account authorization credentials.</u></string>
    <string name="sensitiveSelection">Select credentials to change:</string>
    <string name="submit">Submit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editEmailMessage">We will send a verification link to your new email.</string>
    <string name="newEmail">New Email</string>
    <string name="newPassword">New Password</string>
    <string name="passwordMessage">Enter the password you use to login.</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="addProduct">Add Product</string>
    <string name="price">Price ($)</string>
    <string name="description">Description</string>
    <string name="quantity">Quantity</string>
    <string name="noProductsAvailable">No Products Available</string>
    <string name="warning">Warning!</string>
    <string name="productDescription">Product Description</string>
    <string name="stockQuantity">Stock Quantity</string>
    <string name="sellersInfo">Seller Info</string>
    <string name="status">Status</string>
    <string name="number">1</string>
    <string name="editProduct">Edit Product</string>
    <string name="addToCart">Add to Cart</string>
    <string name="productAmountMessage">How many items of the product do you want to add?</string>
    <string name="quantityInStock">Quantity in Stock:</string>
    <string name="desiredAmount">Desired Amount:</string>
    <string name="cart">Go to Cart</string>
    <string name="noCartItemsFound">No Cart Items Found</string>
    <string name="subtotal">Subtotal:</string>
    <string name="checkout">Checkout</string>
    <string name="subtotalPrice">$100.00</string>
    <string name="waSalesTax">WA Sales Tax:</string>
    <string name="waSalesTaxPrice">$10.40</string>
    <string name="shipping">Shipping &amp; Handling:</string>
    <string name="shippingPrice">$10.00</string>
    <string name="totalAmount">Total Amount:</string>
    <string name="totalAmountPrice">$120.40</string>
    <string name="outOfStock">OUT OF STOCK</string>
    <string name="addNewAddress">Add New Address</string>
    <string name="noAddressesFound">No Addresses Found</string>
    <string name="addresses">Addresses</string>
    <string name="zipcode">Zipcode</string>
    <string name="additionalInfo">Additional Info (Optional)</string>
    <string name="additionalInfoExample">Ex: Apt, suite, unit, building, floor, etc.</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="wa">WA</string>
    <string name="nothing"> </string>
    <string name="city">City</string>
    <string name="otherDetails">Other Details</string>
    <string name="streetAddress">Street Address</string>
    <string name="addressCityStateZip">City, State Zipcode</string>
    <string name="type">Type</string>
    <string name="paymentsMethods">Payment Methods</string>
    <string name="addNewPayment">Add New Payment Method</string>
    <string name="noPaymentsFound">No payment methods found</string>
    <string name="defaultText">Default</string>
    <string name="setAsDefault">Set as default shipping address.</string>
    <string name="nameOnCard">Name On Card</string>
    <string name="cardNumber">Card Number</string>
    <string name="expirationDate">Expiration Date</string>
    <string name="cvv">CVV</string>
    <string name="setAsDefaultPayment">Set as default payment method</string>
    <string name="paymentUpdatedSuccess">Payment method successfully updated!</string>
    <string name="paymentAddedSuccess">Payment method successfully added!</string>
    <string name="endingNumber">Credit card ending with ****1234</string>
    <string name="cardName">Card Name</string>
    <string name="items">Items:</string>
    <string name="orderTotalText">Order Total:</string>
    <string name="placeYourOrder">Place Your Order</string>
    <string name="shippingTo">Shipping to:</string>
    <string name="somewhere">Somewhere</string>
    <string name="productItems">Product Items</string>
    <string name="shippingAddress">Shipping Address</string>
    <string name="paymentsMethod">Payment Method</string>
    <string name="noOrdersFound">No Orders Found</string>
    <string name="orderNumber">Order Number</string>
    <string name="orderPrice">Order Price</string>
    <string name="orderDetails">Order Details</string>
    <string name="orderDate">Order Date</string>
    <string name="orderDateNumber">01/11/2021</string>
    <string name="orderStatus">Order Status</string>
    <string name="pending">Pending</string>
    <string name="paymentMethod">Payment Method:</string>
    <string name="creditCard">Credit Card</string>
    <string name="inProgress">In Progress</string>
    <string name="delivered">Delivered</string>
    <string name="soldProducts">Sold Products</string>
    <string name="noProductsSold">No Products Sold</string>
    <string name="soldProduct">Sold Product</string>
    <string name="soldProductPrice">Sold Product Price</string>

    <string-array name="states">
        <item> </item>
        <item>AL</item>
        <item>AK</item>
        <item>AR</item>
        <item>AZ</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string-array name="numberedMonths">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="next20Years">
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2028</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
    </string-array>
</resources>