<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.macode.stopnshop.utilities.SNSTextView
        android:id="@+id/imageSelectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/selectImageAction"
        android:textColor="@color/black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cameraSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/camera"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toStartOf="@+id/gallerySelection"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSelectionTitle" />

    <TextView
        android:id="@+id/cameraSelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="italic"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cameraSelection"
        app:layout_constraintStart_toStartOf="@+id/cameraSelection"
        app:layout_constraintTop_toBottomOf="@+id/cameraSelection" />

    <ImageView
        android:id="@+id/gallerySelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image"
        android:src="@drawable/gallery"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cameraSelection"
        app:layout_constraintTop_toBottomOf="@+id/imageSelectionTitle" />

    <TextView
        android:id="@+id/gallerySelectionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        android:textStyle="italic"
        android:layout_marginBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/gallerySelection"
        app:layout_constraintStart_toStartOf="@+id/gallerySelection"
        app:layout_constraintTop_toBottomOf="@+id/gallerySelection" />

</androidx.constraintlayout.widget.ConstraintLayout>