<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_2"
    tools:context=".view.activities.ForgotPasswordActivity">

    <include
        android:id="@+id/forgotPasswordToolbar"
        layout="@layout/main_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forgotPasswordImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:src="@drawable/security"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordToolbar" />

    <com.macode.stopnshop.utilities.SNSTextView
        android:id="@+id/forgotPasswordMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/forgotPasswordMessage"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/forgotPasswordEmailInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:textColorHint="@color/primaryLightColor"
        app:boxStrokeColor="@color/primaryLightColor"
        app:hintTextColor="@color/primaryLightColor"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordMessage"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordMessage"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordMessage">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/forgotPasswordEmailEditInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/primaryLightColor"
            android:textSize="@dimen/_16sdp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.macode.stopnshop.utilities.SNSButton
        android:id="@+id/forgotPasswordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/button_background"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordEmailInput"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordEmailInput"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEmailInput" />

    <com.macode.stopnshop.utilities.SNSTextView
        android:id="@+id/backToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/backToLogin"
        android:textSize="@dimen/_16sdp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/forgotPasswordButton"
        app:layout_constraintStart_toStartOf="@+id/forgotPasswordButton"
        app:layout_constraintTop_toBottomOf="@+id/forgotPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>