<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile_image_background"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressFullName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/fullName"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryDarkColor"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/singleAddressType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressStreet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/streetAddress"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryDarkColor"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="@+id/singleAddressType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleAddressFullName" />

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressCityStateZip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:hint="@string/addressCityStateZip"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryDarkColor"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toStartOf="@+id/singleAddressDefault"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/singleAddressStreet" />

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/phone"
                android:textColor="@color/primaryDarkColor"
                android:textColorHint="@color/primaryDarkColor"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/singleAddressDefault"
                app:layout_constraintStart_toStartOf="@+id/singleAddressCityStateZip"
                app:layout_constraintTop_toBottomOf="@+id/singleAddressCityStateZip" />

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_background"
                android:hint="@string/type"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.macode.stopnshop.utilities.SNSTextView
                android:id="@+id/singleAddressDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/button_background"
                android:visibility="gone"
                android:text="@string/defaultText"
                android:padding="@dimen/_5sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>



</androidx.constraintlayout.widget.ConstraintLayout>